--- a/views/index.ejs
+++ b/views/index.ejs
@@ -46,5 +46,6 @@
 
         <script src="bower_components/jquery/dist/jquery.min.js"></script>
         <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
